--- a/frontend-app/inventag-admin/src/App.css
+++ b/frontend-app/inventag-admin/src/App.css
@@ -36,6 +36,7 @@ textarea {
   display: flex;
   justify-content: space-between;
   gap: 10px;
+  background-color: blue;
 }
 
 button {
@@ -43,7 +44,7 @@ button {
   padding: 10px;
   border: none;
   border-radius: 6px;
-  background-color: #3b82f6;
+  background-color: #3b82f6 !important;
   color: white;
   font-size: 14px;
   cursor: pointer;
